# litgnn

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
examples/: hydra101.md  tdc.md
litgnn/: optimize.py  train.py  utils.py
litgnn/conf/: config.yaml
litgnn/conf/dataset/: custom.yaml  molecule_net.yaml
litgnn/conf/dataset/biogen/: hlm.yaml  hppb.yaml  mdr1_er.yaml  rlm.yaml  rppb.yaml  sol.yaml
litgnn/conf/dataset/molecule_net/: clintox.yaml
litgnn/conf/dataset/tdc/: ames.yaml  bbb_martins.yaml  cyp2c9_veith.yaml  cyp2d6_veith.yaml  cyp3a4_veith.yaml  ld50_zhu.yaml  lipophilicity_astrazeneca.yaml  solubility_aqsoldb.yaml
litgnn/conf/hpo/optuna/: custom_cmpnn.yaml  default.yaml
litgnn/conf/hpo/optuna/search_spaces/: attentive_fp.yaml  cmpnn.yaml  pna.yaml
litgnn/conf/hydra/job_logging/: custom.yaml
litgnn/conf/model/: attentive_fp.yaml  cmpnn.yaml  pna.yaml
litgnn/conf/model/tdc/: ames-cmpnn.yaml  bbb_martins-cmpnn.yaml  ld50_zhu-cmpnn.yaml  lipophilicity_astrazeneca-cmpnn.yaml  solubility_aqsoldb-cmpnn.yaml
litgnn/conf/optuna_params/: custom_cmpnn.yaml
litgnn/conf/scheduler/: noam.yaml
litgnn/conf/task/: binary_classification.yaml  classification.yaml  multiclass_classification.yaml  multilabel_classification.yaml  regression.yaml
litgnn/data/: custom_dataset.py  data_module.py  dataset_spec.py  utils.py
litgnn/models/: __init__.py  graph_level.py  lit_model.py  pna.py
litgnn/models/cmpnn/: model.py
litgnn/nn/lr_scheduler/: __init__.py  noam_scheduler.py
litgnn/nn/models/: __init__.py  graph.py  lit_model.py  pna.py
litgnn/nn/models/cmpnn/: __init__.py  featurization.py  model.py
litgnn/splits/: __init__.py  random_split.py  scaffold_split.py
litgnn/trainer/: __init__.py  hydra_trainer.py  optuna.py  utils.py
scripts/: group_run.sh  setup_env.sh  train.sh
tests/conf/: test_dataset_configs.py
tests/data/: test_custom_dataset.py  test_pyg_and_custom_datasets.py
